data/derived/comb/progs/unify/prog0305.ml.out
Characters 67-85:
  | _ -> digitsOfInt (n/10)::(n mod 10);;
         ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
